@@ -1,3 +1,8 @@
+2006-09-04  Paolo Carlini  <pcarlini@suse.de>
+
+	* src/mt_allocator.cc (__pool<true>::_M_reclaim_block): Do
+	not name a variable __used, badname on BSD.
+
 2006-09-02  Paolo Carlini  <pcarlini@suse.de>
 	    Richard Guenther  <rguenther@suse.de>
 
